--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <script>
-        window.location.href = "src/send-docs.php";
+        window.location.href = "src/send-Docs.php";
       </script>
       
     
