--- a/src/send-Docs.html
+++ b/src/send-Docs.html
@@ -39,9 +39,16 @@
         </div>
     </div>
     
-    <div class="body-part"></div>
+    <div class="body-part px-10 flex w-full h-9/10 bg-red-500">
+
+        <div class="side-menu w-ct-15 bg-red-500">Lorem ipsum dolor sit amet.</div>
+
+        <div class="table-info w-full bg-green-500">Lorem ipsum dolor sit amet.</div>
+
+    </div>
 
 
 <script src="../script/script.js"></script>
+<script src="../script/config.tailwind.js"></script>
 </body>
 </html>
